Fixed the spacing between FAQ paragraph answers

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -753,7 +753,9 @@ video {
 }
 
 .question {
-    font-size: 1.32rem;
+    font-size: 1.28rem;
+    font-weight: bold;
+    line-height: 1.8rem;
     padding: 0;
     margin: 0;
     max-width: 95%;
@@ -785,12 +787,16 @@ video {
 
 .answer {
     transition: 0.3s;
-    font-size: 1rem;
     margin-bottom: 0;
     max-height: 0;
     position: relative;
     top: 1rem;
     opacity: 0;
+}
+
+.answer p {
+    font-size: 1.06rem;
+    margin-bottom: 1.2rem;
 }
 
 .answer--open {
